--- a/news/news.csproj
+++ b/news/news.csproj
@@ -134,6 +134,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
+    <Compile Include="Areas\Admin\Controllers\LoginController.cs" />
     <Compile Include="Areas\Admin\Controllers\MenusController.cs" />
     <Compile Include="Areas\Admin\Controllers\PostsController.cs" />
     <Compile Include="Areas\haha.cs" />
@@ -141,9 +142,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Help\Functions.cs" />
     <Compile Include="Models\Catagory.cs">
       <DependentUpon>Model10.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\LoginMD.cs" />
     <Compile Include="Models\Messages.cs">
       <DependentUpon>Model10.tt</DependentUpon>
     </Compile>
@@ -1493,6 +1496,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\fontawesome.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -3139,7 +3143,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Models\" />
-    <Folder Include="Content\upload\img\" />
+    <Folder Include="Content\upload\img\news\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -3289,6 +3293,8 @@
     <Content Include="Areas\Admin\Views\Posts\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Posts\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Home\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\loginlayout.cshtml" />
+    <Content Include="Areas\Admin\Views\Login\Index.cshtml" />
     <None Include="packages.config" />
     <Content Include="Views\Home\Search.cshtml" />
     <Content Include="Views\Home\getSearch.cshtml" />
@@ -3442,6 +3448,12 @@
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="D:\news\Areas\admin\Content\ckfinder\bin\Debug\CKFinder.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\model\model.csproj">
+      <Project>{e95b6b1e-4bc7-45df-aae0-6ca7af3d448e}</Project>
+      <Name>model</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
